Working Dialog for Genres MUst finish displaying the fragment data.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,21 @@
     <string name="app_name">RockAroundApp</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string-array name="genres">
+        <item>Jazz</item>
+        <item>Classical</item>
+        <item>Pop</item>
+        <item>RnB</item>
+        <item>Rap</item>
+        <item>Indie</item>
+        <item>Rock</item>
+        <item>Metal</item>
+        <item>Disco</item>
+        <item>Techno</item>
+        <item>Country</item>
+        <item>Hip-Hop</item>
+        <item>Blues</item>
+        <item>Soul</item>
+    </string-array>
 </resources>
