- Fully implemented Venue, Solo, Group Setup - Fixed image upload to storage - Fixed Image upload cropping errors - Added default editText background

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,8 @@
         <item>Blues</item>
         <item>Soul</item>
     </string-array>
+
+    <string-array name="venue_size">
+        <item></item>
+    </string-array>
 </resources>
