- Cleaned up more views - Completed Venue profile view - Started Review System

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,13 @@
         <item>Soul</item>
     </string-array>
 
+    <string-array name="filters">
+        <item>Ascending</item>
+        <item>Descending</item>
+        <item>Rating (High-low)</item>
+        <item>Rating (Low-high)</item>
+    </string-array>
+
     <string-array name="venue_size">
         <item></item>
     </string-array>
