--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,19 @@
 <resources>
     <string name="app_name">RockAroundApp</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="no_reviews_too_see_here">No Reviews</string>
     <string name="per_hour">per hour</string>
     <string name="logout">Logout</string>
     <string name="artist_already_reviewed">Artist already reviewed</string>
+    <string name="write_review">Write Review</string>
+    <string name="more_reviews">More reviews</string>
+    <string name="communication_rating">Communication Rating</string>
+    <string name="reviews">Reviews</string>
+    <string name="how_was_your_experience_with_this_venue">How was your experience with this venue?</string>
+    <string name="title">Title</string>
+    <string name="setting_rating">Setting Rating</string>
+    <string name="atmosphere_rating">Atmosphere Rating</string>
+    <string name="submit">Submit</string>
 
     <string-array name="genres">
         <item>Jazz</item>
