- Code cleanup & fixed review submission for venues

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,9 @@
     <string name="submit">Submit</string>
     <string name="reliability_rating">Reliability Rating</string>
     <string name="venue_already_reviewed">Venue already reviewed</string>
+    <string name="discover">Discover</string>
+    <string name="map">Map</string>
+    <string name="account">Account</string>
 
     <string-array name="genres">
         <item>Jazz</item>
