--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,12 @@
     <string name="discover">Discover</string>
     <string name="map">Map</string>
     <string name="account">Account</string>
+    <string name="contact">Contact</string>
+    <string name="ratings">Ratings</string>
+    <string name="overall_rating">Overall Rating</string>
+    <string name="stage_presence_rating">Stage Presence Rating</string>
+    <string name="vocals_rating">Vocals Rating</string>
+    <string name="bio">Bio</string>
 
     <string-array name="genres">
         <item>Jazz</item>
