--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,11 +59,20 @@
         <item>Soul</item>
     </string-array>
 
-    <string-array name="filters">
+    <string-array name="venue_filters">
         <item>Descending</item>
         <item>Ascending</item>
         <item>Rating (High-low)</item>
         <item>Rating (Low-high)</item>
+        <item>Price (High-Low)</item>
+        <item>Price (Low-High)</item>
+    </string-array>
+
+    <string-array name="artist_filters">
+    <item>Descending</item>
+    <item>Ascending</item>
+    <item>Rating (High-low)</item>
+    <item>Rating (Low-high)</item>
     </string-array>
 
 </resources>
