- Final commit and Push

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,7 @@
     <string name="country">Country</string>
     <string name="max_capacity">Max Capacity</string>
     <string name="login">Login</string>
+    <string name="rockaround">RockAround</string>
 
     <string-array name="genres">
         <item>Jazz</item>
